<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:padding="8dp"
    android:stretchColumns="0">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="100"
        android:id="@+id/subLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/fly_for"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:fontFamily="@font/sf_pro_display"
                android:gravity="fill_horizontal"
                android:text="@string/fly_from"
                android:textColor="@color/grayText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fly_for_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:fontFamily="@font/sf_pro_display"
                android:gravity="fill_horizontal"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@tools:sample/cities" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/address_hotel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/address_hotel"
                android:textColor="@color/grayText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_hotel_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@tools:sample/cities" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/date"
                android:textColor="@color/grayText"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_hotel" />

            <TextView
                android:id="@+id/date_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@tools:sample/date/ddmmyy" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/count_night"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/count_night"
                android:textColor="@color/grayText"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date" />

            <TextView
                android:id="@+id/count_night_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@tools:sample/us_zipcodes" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/hotel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/hotel_title"
                android:textColor="@color/grayText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hotel_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@tools:sample/lorem" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/room"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/room"
                android:textColor="@color/grayText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/room_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@tools:sample/lorem" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/catering_at_the_hotel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/catering_at_the_hotel"
                android:textColor="@color/grayText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/catering_at_the_hotel_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:fontFamily="@font/sf_pro_display"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@tools:sample/lorem" />
        </TableRow>
    </LinearLayout>
</TableLayout>
